ignore user java extensions [GEOS-8304] (#2542)
See https://osgeo-org.atlassian.net/browse/GEOS-8304

Signed-off-by: Jody Garnett <jody.garnett@gmail.com>